--- a/webapp/index.xhtml
+++ b/webapp/index.xhtml
@@ -19,8 +19,8 @@
 
 <h:body>
 	<h:form id="form">
-		<p:layout style="height:100%">
-			<p:layoutUnit position="west" size="400" style="height:100%">
+		<p:layout style="height:950px">
+			<p:layoutUnit position="west" size="400" style="border:0">
 				<ui:include src="menu.xhtml" />
 			</p:layoutUnit>
 			<p:layoutUnit position="center" style="width:100%;border:0">
